On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -117,6 +117,7 @@ Permet de voir le contenu (<strong style="font-size: 1.5em;">l</strong>i<strong 
         ls <span class="fichier">/</span> <span class="OneLetterOption">-R</span> <span class="OneLetterOption">-a</span>
         ls <span class="fichier">.</span> <span class="OneLetterOption">-a</span>
         ls <span class="OneLetterOption">-a</span> <span class="fichier">.</span>
+    <strong><span style="color: red;">A</strong>ttention</span> : <span class="descriptionOption">Ne pas condondre avec <strong><span style="color: red;">sl</span></strong> qui est une autre commande</span>
     
 </div>
 
