On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -24,7 +24,7 @@
         console.log("La page précédente ?");
         // CodeColorSyntaxHighlightR(document.getElementById("CodeKaliZsh"), "zsh");
         
-        var pagePrecedente = history.back();
+        // var pagePrecedente = history.back(); va à la page précedente
         console.log("La page précédente est : " + pagePrecedente);
         
     </script>
