--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -32,10 +32,44 @@
             s.setItem(n, location.href);
             return p;
         }
-        // var pagePrecedente = history.back(); va à la page précedente
         var pagePrecedente = urlPrecedente();
+        var pageActuelle = window.location.href;
+        var path= "/Cyber/Cyber.html"
+        var pageRacine = pageActuelle.substring(0, pageActuelle.length-path.length);
+        var debug = true;
         console.log("La page précédente est : " + pagePrecedente);
-        
+        console.log("La page actuelle est   : " + pageActuelle  );
+        console.log("La page Racine est     : " + pageRacine    );
+        if (pagePrecedente == "https://raykesh-soneka.github.io/Portfolio/Cyber/Cyber.html" || pagePrecedente == (pageRacine+"/AboutMe.html") || pagePrecedente == (pageRacine+"/Cyber/Cyber.html")) {
+            //TODO
+            console.log(true);
+            console.log("True");
+        } else {
+            console.log(false);
+            console.log("False");
+            if (debug) {
+                console.log(pagePrecedente);
+                console.log("https://raykesh-soneka.github.io/Portfolio/AboutMe.html");
+                console.log((pageRacine+"/AboutMe.html"));
+                const delay = ms => new Promise(res => setTimeout(res, ms));
+                const MaFonctionQuiAttend = async () => {
+                    await delay(1000);
+                    console.log("Waited 1s");
+                    await delay(1000);
+                    console.log("Waited 2s");
+                    await delay(1000);
+                    console.log("Waited 3s");
+                    await delay(1000);
+                    console.log("Waited 4s");
+                    await delay(1000);
+                    console.log("Waited 5s");
+                    window.location.replace("../Le_Site_De_Raykesh.html");
+                };
+                MaFonctionQuiAttend()
+            }
+        }
+        window.location.replace("../Le_Site_De_Raykesh.html");
+        console.log("Fin");
     </script>
 </head>
 <body>
