On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -67,7 +67,7 @@
                 };
                 MaFonctionQuiAttend()
             }
-            window.location.replace("../Le_Site_De_Raykesh.html");
+            window.location.replace("../AboutMe.html");
         }
         console.log("Fin");
     </script>
