On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -66,8 +66,7 @@
                     window.location.replace("../Le_Site_De_Raykesh.html");
                 };
                 MaFonctionQuiAttend()
-            }
-            window.location.replace("../AboutMe.html");
+            }else{window.location.replace("../Le_Site_De_Raykesh.html");}
         }
         console.log("Fin");
     </script>
