--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -46,6 +46,7 @@
         if (pagePrecedente == "https://raykesh-soneka.github.io/Portfolio/Cyber/Cyber.html" || pagePrecedente == (pageRacine+"/AboutMe.html") || pagePrecedente == (pageRacine+"/Cyber/Cyber.html")) {
             //TODO
         // if (pagePrecedente in Url_secure) {
+        // if (Url_secure.includes(pagePrecedente)) {
             console.log(true);
             console.log("True");
         } else {
