--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -40,13 +40,13 @@
         console.log("La page précédente est : " + pagePrecedente);
         console.log("La page actuelle est   : " + pageActuelle  );
         console.log("La page Racine est     : " + pageRacine    );
-        // const Url_secure = ["https://raykesh-soneka.github.io/Portfolio/Cyber/Cyber.html",(pageRacine+"/AboutMe.html"), (pageRacine+"/Cyber/Cyber.html")];
-        // console.log("Les pages autoriser sont : ");
-        // Url_secure.forEach(element => {console.log(element+', ')});
-        if (pagePrecedente == "https://raykesh-soneka.github.io/Portfolio/Cyber/Cyber.html" || pagePrecedente == (pageRacine+"/AboutMe.html") || pagePrecedente == (pageRacine+"/Cyber/Cyber.html")) {
-            //TODO
+        const Url_secure = ["https://raykesh-soneka.github.io/Portfolio/Cyber/Cyber.html",(pageRacine+"/AboutMe.html"), (pageRacine+"/Cyber/Cyber.html")];
+        console.log("Les pages autoriser sont : ");
+        Url_secure.forEach(element => {console.log(element+', ')});
+        // if (pagePrecedente == "https://raykesh-soneka.github.io/Portfolio/Cyber/Cyber.html" || pagePrecedente == (pageRacine+"/AboutMe.html") || pagePrecedente == (pageRacine+"/Cyber/Cyber.html")) {
+        //     //TODO
         // if (pagePrecedente in Url_secure) {
-        // if (Url_secure.includes(pagePrecedente)) {
+        if (Url_secure.includes(pagePrecedente)) {
             console.log(true);
             console.log("True");
         } else {
