"Added rel attributes to AboutMe.html link, commented out a duplicate link, and reformatted a conditional statement in Cyber.html"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -45,8 +45,7 @@
         Url_secure.forEach(element => {console.log(element+', ')});
         // if (pagePrecedente == "https://raykesh-soneka.github.io/Portfolio/Cyber/Cyber.html" || pagePrecedente == (pageRacine+"/AboutMe.html") || pagePrecedente == (pageRacine+"/Cyber/Cyber.html")) {
         //     //TODO
-        // if (pagePrecedente in Url_secure) {
-        if (Url_secure.includes(pagePrecedente)) {
+        if (Url_secure.includes(pagePrecedente)) {// if (pagePrecedente in Url_secure) {
             console.log(true);
             console.log("True");
         } else {
