--- a/AboutMe.html
+++ b/AboutMe.html
@@ -45,6 +45,7 @@
     à SUIVRE...
     <ul><a href="Le_Site_De_Raykesh.html" rel="noopener noreferrer" title="Page Principale"><li> Home      </li></a></ul>
     <ul><a href="Cyber/Cyber.html" rel="noopener noreferrer" title="êtes vous sûr? êtes vous sûr de vouloir cliquer?"><li> Cyber      </li></a></ul>
+    <!-- <ul><a href="Cyber/Cyber.html"  title="êtes vous sûr? êtes vous sûr de vouloir cliquer?"><li> Cyber      </li></a></ul> -->
     <div id="f">
         <div html_Inclusion="Le_Site_De_Raykesh.html"></div>
         <script>htmlInclusion();</script>
