"Updated HTML code to change list numbering in code blocks"
Décale l'indexation de -1

On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -128,7 +128,7 @@ ls
 </code></pre> -->
 <!-- Sur https://highlight.hohli.com/?numbers=1&theme=github-dark&language=shell -->
 <pre style="font-family:monospace;color: rgb(201, 209, 217); background-color: rgb(13, 17, 23); font-weight: 400; ">
-<ol style="padding-left: 3em;"><li>ls</li></ol></pre>
+<ol style="padding-left: 3em;" start="0"><li>ls</li></ol></pre>
 Permet de voir le contenu (<strong style="font-size: 1.5em;">l</strong><span style="font-size: 0.5em;">i</span><strong style="font-size: 1.5em;">s</strong><span style="font-size: 0.5em;">ter</span>) du dossier/répertoire courant 
 <!-- 
 <pre>
@@ -171,7 +171,7 @@ Permet de voir le contenu (<strong style="font-size: 1.5em;">l</strong><span sty
 
 
 <pre style="font-family:monospace;color: rgb(201, 209, 217); background-color: rgb(13, 17, 23); font-weight: 400; ">
-<ol style="padding-left: 3em;"><li>nmap</li></ol></pre>
+<ol style="padding-left: 3em;" start="1"><li>nmap</li></ol></pre>
 Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span style="font-size: 0.5em;">etwork </span><strong style="font-size: 1.5em;">Map</strong><span style="font-size: 0.5em;">per</span>) et les services ainsi que l'OS.
 <div class="pre">
     
