"Added two new nmap command examples and a TODO comment in Cyber.html"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -187,9 +187,11 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         <span style="color: salmon;">nmap</span>                        |<span style="color: red;">( <strong>Montre la documentation</strong> )</span>
         <span style="color: salmon;">nmap</span> <span style="color:tomato;">127.0.0.1</span> <span class="OneLetterOption">-A</span> <span class="OneLetterOption">-v</span>
         <span style="color: salmon;">nmap</span> <span class="Option">--vv</span> <span class="fichier">-sL</span> <span style="color:tomato;">127.0.0.1</span>
+        <span style="color: salmon;">nmap</span> <span style="color:tomato;">127.0.0.1</span> <span class="Option"><span class="OneLetterOption">-p</span>1234</span> <span class="OneLetterOption">-A</span><span class="OneLetterOption">-v</span>
+        <span style="color: salmon;">nmap</span> <span style="color:tomato;">127.0.0.1</span> <span class="Option"><span class="OneLetterOption">-p</span>0-10000</span> <span class="OneLetterOption">-A</span><span class="OneLetterOption">-v</span>
     <span style="color: #ff0000">V</span><span style="color: #ff7f00">o</span><span style="color: #ff9200">i</span><span style="color: #00ff00">r</span><span style="color: #00ffff"> </span><span style="color: #0000ff">a</span><span style="color: #8b00ff">u</span><span style="color: #ff0000">s</span><span style="color: #ff7f00">s</span><span style="color: #ffa900">i</span><span style="color: #00ff00"> </span><span style="color: #3c00ff">:</span><span style="color: #0000ff"> </span><span style="color: gold;"> nmap <span class="Option"><span class="OneLetterOption">-h</span></span></span>
 </div>
-
+<!-- TODO crawler, john, yes, cat, kex, neofetch, sudo apt,... -->
         <h3 id="Item2">Item 2</h3>    
         <h3 id="Item3">Item 3</h3>    
         </section>
