"Updated Cyber.html and hashtest.html with changes to script tags, added functionality for cryptographie, and modified HTML structure and content."

--- a/Cyber/hashtest.html
+++ b/Cyber/hashtest.html
@@ -3,7 +3,7 @@
 <head>
   <title>SHA-256 Hash Test</title>
 </head>
-<body hidden>
+<body >
   <h1>SHA-256 Hash Test</h1>
   <input type="text" id="input" placeholder="Enter a string to hash">
   <button onclick="hashInput()">Hash</button>
