--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -244,9 +244,11 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             // console.log(hashTexte)
             console.log(hash)
             
-            const cle = `${hash}`;
+            var cle = `${hash}`;
             console.log("clée     :");
             console.log(cle)
+            cle = (cle.repeat( inputT.length/cle.length - inputT.length%cle.length + 1 ))
+            console.log(cle.repeat( inputT.length/cle.length - inputT.length%cle.length + 1 ))
             const encryptedStr = xorEncrypt(inputT, cle);
             console.log(encryptedStr); // Output: a encrypted string
             document.getElementById("outputC").innerHTML = `Encryptée : |${encryptedStr}|`;
