"Updated summary text in details element to include '(Table of Contents)'."

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -105,7 +105,7 @@
         <h4 hidden>merci</h4>
         
         <details>
-            <summary>Le Menu du jour : </summary>
+            <summary>Le Menu du jour / (Table of Contents) :  </summary>
             <nav>
                 <h2>Cybersécurité : </h2>
                 <ul>
