--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -204,7 +204,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
 
             <input type="text" id="inputT" placeholder="Entrer le Texte" value="Texte"><br>
             <input type="text" id="inputM" placeholder="Entrer le MDP" value="Test"><br>
-            Cryptage (on préféra le terme chffrage/chiffrement) : <br>
+            Cryptage (on préféra le terme chiffrage/chiffrement) : <br>
 
             <button onclick="testInputC()">Chiffrer</button><br>
             <div id="outputC">Texte Chiffrer</div><br>
@@ -216,6 +216,16 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         <div id="outputD">Texte Déhiffré</div><br>
         On remarquera que le chiffrage et le déchiffrage utilise une même fonction en plus d'être simple pour l'instant.
         On pourra voir une version plus sophistiqué par la suite, qui part du même principe mais avec plusieur couche imbriquer.
+
+        <h3>shift encryption, Chiffrement par décalage ou chiffrement de césar </h3> est une  méthode de chiffrement qui consiste à décaler chaque lettre dans l'alphabet d'un nombre définie de caractère.
+
+        <p>C'est un méthode de chiffrement symétrique qui est très connu et relativement simple à mettre en place.
+          Pour avoir un meilleur chiffrement ou un chiffrement plus complexe on peux soit augmenter le nombre de caractère (passer de l'alphabet classique à ASCII à ASCII-extended à UTF-8 par Exemple.) ou mélanger les caractère.
+          On peut aussi choisir un nombre de décallage plus grand ou évoluant dans le temps ou au cours des caractères.
+          On peut aussi croisée plusieur chiffrement de césar différent et utiliser les techniques précédament citée comme dans la machine enigma.
+        </p>
+
+
         <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10">TODO</textarea><br>
 
         <h3 id="Item3">Item 3</h3>    
