"Fixed typo in Cyber.html: 'croisée' -> 'croiser'"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -222,7 +222,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         <p>C'est un méthode de chiffrement symétrique qui est très connu et relativement simple à mettre en place.
           Pour avoir un meilleur chiffrement ou un chiffrement plus complexe on peux soit augmenter le nombre de caractère (passer de l'alphabet classique à ASCII à ASCII-extended à UTF-8 par Exemple.) ou mélanger les caractère.
           On peut aussi choisir un nombre de décallage plus grand ou évoluant dans le temps ou au cours des caractères.
-          On peut aussi croisée plusieur chiffrement de césar différent et utiliser les techniques précédament citée comme dans la machine enigma.
+          On peut aussi croiser plusieurs chiffrements de César différents et utiliser les techniques précédemment citées comme dans la machine enigma.
         </p>
 
 
