--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -215,7 +215,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         <button onclick="testInputD()">Déchiffrer</button><br>
         <div id="outputD">Texte Déhiffré</div><br>
         On remarquera que le chiffrage et le déchiffrage utilise une même fonction en plus d'être simple pour l'instant.
-        On pourra voir une version plus sophistiqué par la suite, qui part du même principe mais avec plusieur couche imbriquer.
+        On pourra voir une version plus sophistiquée par la suite, qui part du même principe mais avec plusieurs couche imbriquée.
 
         <h3>shift encryption, Chiffrement par décalage ou chiffrement de césar </h3> est une  méthode de chiffrement qui consiste à décaler chaque lettre dans l'alphabet d'un nombre définie de caractère.
 
@@ -223,6 +223,8 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
           Pour avoir un meilleur chiffrement ou un chiffrement plus complexe on peux soit augmenter le nombre de caractère (passer de l'alphabet classique à ASCII à ASCII-extended à UTF-8 par Exemple.) ou mélanger les caractère.
           On peut aussi choisir un nombre de décallage plus grand ou évoluant dans le temps ou au cours des caractères.
           On peut aussi croiser plusieurs chiffrements de César différents et utiliser les techniques précédemment citées comme dans la machine enigma.
+          Le déchiffrage consiste à utiliser le même algorithme avec un décallage de -n si il a été chiffré avec un décallage de n. Il faut aussi utiliser le même ensemble de caractère dans le même ordre.
+
         </p>
 
 
