"Indentation added to a paragraph in Cyber.html"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -219,7 +219,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
 
         <h3>shift encryption, Chiffrement par décalage ou chiffrement de césar </h3> est une  méthode de chiffrement qui consiste à décaler chaque lettre dans l'alphabet d'un nombre définie de caractère.
 
-        <p>C'est un méthode de chiffrement symétrique qui est très connu et relativement simple à mettre en place.
+        <p style="margin-left: 60px;">C'est un méthode de chiffrement symétrique qui est très connu et relativement simple à mettre en place.
           Pour avoir un meilleur chiffrement ou un chiffrement plus complexe on peux soit augmenter le nombre de caractère (passer de l'alphabet classique à ASCII à ASCII-extended à UTF-8 par Exemple.) ou mélanger les caractère.
           On peut aussi choisir un nombre de décallage plus grand ou évoluant dans le temps ou au cours des caractères.
           On peut aussi croiser plusieurs chiffrements de César différents et utiliser les techniques précédemment citées comme dans la machine enigma.
