"Updated Cyber.html: changed button onclick function from testInputC to testInputX and corresponding output div id from outputC to outputX. Added CSS rule to set input background color to red."

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -233,8 +233,8 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             <input type="text" id="inputM" placeholder="Entrer le MDP" value="Test"><br>
             Cryptage (on préféra le terme chiffrage/chiffrement) : <br>
     
-            <button onclick="testInputC()">Chiffrer</button><br>
-            <div id="outputC">Texte Chiffrer</div><br>
+            <button onclick="testInputX()">Chiffrer</button><br>
+            <div id="outputX">Texte Chiffrer</div><br>
         </div>
         <br>
         <textarea name="Exemple" id="TestTexteArea" cols="30" rows="10">TODO</textarea><br>
