"Updated input field id and style in Cyber.html and added animation to input fields in styleCyber.css"

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -230,7 +230,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
         <!-- TODO -->
         
         <div><br>
-            <input type="text" id="inputM" placeholder="Entrer le MDP" value="Test"><br>
+            <input type="text" id="inputMX" placeholder="Entrer le MDP" value="Test"><br>
             Cryptage (on préféra le terme chiffrage/chiffrement) : <br>
     
             <button onclick="testInputX()">Chiffrer</button><br>
