Cesar fonctionnele à améliorer
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -257,7 +257,7 @@ Permet de scanner les port (<strong style="font-size: 1.5em;">N</strong><span st
             const inputCesar = "Texte_TesteCesar"
             const CesarStr = encodeCaesar(inputCesar, cle, true);
             console.log(CesarStr);
-            document.getElementById("outputC").innerHTML = `Encryptée : |${CesarStr}|`;
+            document.getElementById("outputCesar").innerHTML = `Encryptée : |${CesarStr}|`;
           }
         /**
          * Retourne le message chiffrée ou déchiffré
